Fix dark mode bug

--- a/src/assets/styles/layouts/page.scss
+++ b/src/assets/styles/layouts/page.scss
@@ -9,6 +9,8 @@
   }
 
   &__cover {
+    @extend .light;
+
     align-content      : end;
     background-color   : #f9b6c3;
     background-position: bottom right;
